--- a/index.css
+++ b/index.css
@@ -2,3 +2,9 @@
     align-items: center;
     background-color:rgb(85, 74, 74);
 }
+
+#top {
+    height: 100px;
+    text-align:center;
+    background-color:darkgreen;
+}
