adds styling to id aka-name

--- a/index.css
+++ b/index.css
@@ -8,3 +8,9 @@
     text-align:center;
     background-color:darkgreen;
 }
+
+#aka-name {
+    color: purple;
+    text-align: center;
+    font-size:30px;
+}
