--- a/index.css
+++ b/index.css
@@ -1,16 +1,16 @@
 .container{
     align-items: center;
-    background-color:rgb(85, 74, 74);
+    background-color:rgb(245, 236, 157);
 }
 
 #top {
     height: 100px;
     text-align:center;
-    background-color:darkgreen;
+    background-color:rgb(122, 6, 2);
 }
 
 #aka-name {
-    color: purple;
+    color: rgb(233, 18, 10);
     text-align: center;
     font-size:30px;
 }
