--- a/index.css
+++ b/index.css
@@ -9,6 +9,15 @@
     background-color:rgb(122, 6, 2);
 }
 
+.button{
+text-align: center;
+padding: 20px 32px;
+border-radius: 20px;
+color: green;
+
+}
+
+
 #aka-name {
     color: rgb(233, 18, 10);
     text-align: center;
